feat: Complete security overhaul and GitHub Pages deployment ready
🔐 Authentication & Security:
- Short-lived access tokens (15min) with automatic refresh
- HttpOnly cookies for secure refresh token storage
- Token rotation with RefreshToken model
- Secure cookie configuration with CSRF protection

📁 File Upload Security:
- Presigned S3 URLs for direct secure uploads
- Virus scanning with ClamAV integration
- Redis queue system with Bull for background processing
- File validation and quarantine system

🚀 CI/CD & Automation:
- GitHub Actions workflow with CodeQL security scanning
- Dependabot for automated dependency updates
- PR template with security checklist
- E2E testing with Playwright

📚 Documentation:
- SECURITY.md with comprehensive security policy
- PRIVACY.md with GDPR-compliant privacy policy
- Updated README with new features

🌐 GitHub Pages Deployment:
- HashRouter for GitHub Pages compatibility
- Enhanced SEO with meta tags and structured data
- Accessibility features and ARIA labels
- Skip links and keyboard navigation

Ready for live deployment!

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend-web
         env:
-          # Use production API URL - you can change this to your backend deployment
-          REACT_APP_API_URL: https://your-backend-api.com/api
+          # Production backend deployed to Vercel
+          REACT_APP_API_URL: https://nanoinfluencer-backend.vercel.app/api
           REACT_APP_APP_NAME: NanoInfluencer Marketplace
           REACT_APP_VERSION: 1.0.0
           PUBLIC_URL: /nanoinfluencer-marketplace
