--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,12 +11,21 @@ NODE_ENV=development
 PORT=3001
 SERVER_NAME=nanoinfluencer-api
 
-# Security Configuration
+# Security Configuration - Secure Token System
+ACCESS_TOKEN_SECRET=your-super-secret-access-key-change-in-production-min-32-chars
+REFRESH_TOKEN_SECRET=your-super-secret-refresh-key-change-in-production-min-32-chars
+ACCESS_TOKEN_EXPIRES_IN=15m
+REFRESH_TOKEN_EXPIRES_IN=7d
+
+# Legacy JWT Configuration (for backward compatibility)
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
 JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
 JWT_REFRESH_EXPIRES_IN=30d
 BCRYPT_ROUNDS=12
+
+# Session Configuration
+SESSION_SECRET=your-session-secret-for-cookie-signing
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:3002,http://localhost:3000
@@ -53,10 +62,19 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-# Payment Configuration (Stripe)
-STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# Payment Configuration (Stripe - TEST MODE ONLY)
+# WARNING: These are test keys only - NO LIVE MONEY TRANSFER
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_test_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_test_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_test_your_webhook_secret_here
+STRIPE_API_VERSION=2023-10-16
+STRIPE_CURRENCY=usd
+
+# Escrow Configuration (Test Mode)
+ESCROW_ENABLED=true
+ESCROW_HOLD_PERIOD_DAYS=7
+ESCROW_AUTO_RELEASE=false
+PAYMENT_TEST_MODE=true
 
 # Social Media API Keys (for influencer verification)
 INSTAGRAM_CLIENT_ID=your-instagram-client-id
@@ -65,11 +83,18 @@ TIKTOK_CLIENT_ID=your-tiktok-client-id
 TIKTOK_CLIENT_SECRET=your-tiktok-client-secret
 YOUTUBE_API_KEY=your_youtube_api_key
 
-# AWS Configuration (for file storage)
+# AWS S3 Configuration (for secure file uploads)
 AWS_ACCESS_KEY_ID=your_aws_access_key
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=nanoinfluencer-uploads
+S3_BUCKET_NAME=nanoinfluencer-uploads
+S3_PRESIGNED_URL_EXPIRES=300
+
+# File Upload Security Configuration
+UPLOAD_MAX_FILE_SIZE_MB=100
+UPLOAD_ALLOWED_EXTENSIONS=jpg,jpeg,png,gif,webp,mp4,webm,mov,avi,pdf,txt,doc,docx
+UPLOAD_VIRUS_SCAN_ENABLED=true
+ENABLE_VIRUS_SCANNER=true
 
 # Admin Configuration
 ADMIN_EMAILS=admin@example.com
@@ -93,6 +118,22 @@ ENABLE_EMAIL_VERIFICATION=true
 ENABLE_TWO_FACTOR_AUTH=false
 ENABLE_CAMPAIGN_APPROVAL=true
 ENABLE_AUTOMATED_PAYMENTS=false
+ENABLE_FILE_UPLOAD=true
+ENABLE_VIRUS_SCANNING=true
+ENABLE_ESCROW_SYSTEM=true
+
+# Testing Configuration
+TEST_DATABASE_URL=postgresql://test_user:test_password@localhost:5432/test_db
+TEST_REDIS_URL=redis://localhost:6379/1
+TEST_S3_BUCKET=nanoinfluencer-test-uploads
+TEST_STRIPE_PUBLISHABLE_KEY=pk_test_your_test_key
+TEST_STRIPE_SECRET_KEY=sk_test_your_test_key
+
+# CI/CD Configuration
+CI_ENVIRONMENT=false
+CODECOV_TOKEN=your_codecov_token_here
+SLACK_WEBHOOK_URL=your_slack_webhook_for_deployments
+SECURITY_SLACK_WEBHOOK_URL=your_security_alerts_webhook
 
 # Cache Configuration
 CACHE_TTL=3600
