--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "build": "echo Backend build skipped",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -34,8 +35,11 @@
   "dependencies": {
     "@sentry/node": "^10.11.0",
     "@sentry/profiling-node": "^10.11.0",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.9",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "crypto-js": "^4.2.0",
@@ -45,6 +49,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
     "helmet": "^7.2.0",
     "joi": "^17.11.0",
@@ -53,7 +58,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^7.0.9",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -62,8 +67,9 @@
     "pg-hstore": "^2.3.4",
     "prom-client": "^15.1.3",
     "qrcode": "^1.5.4",
+    "react-scripts": "0.0.0",
     "redis": "^4.6.10",
-    "sequelize": "^6.35.1",
+    "sequelize": "^6.37.7",
     "sharp": "^0.32.6",
     "speakeasy": "^2.0.0",
     "sqlite3": "^5.1.7",
