--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -8,12 +8,15 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@react-oauth/google": "^0.12.2",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.12.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "7.0.9",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,9 +33,10 @@
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "recharts": "^2.8.0",
+    "sequelize": "^6.37.7",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.3.6",
-    "web-vitals": "^3.5.0",
+    "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -49,7 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -89,5 +93,5 @@
       "!src/reportWebVitals.js"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:5000"
 }
